(executable
  (name ExampleCodemod)
  (public_name ExampleCodemod.exe)
  (libraries Codemod ReasonLanguageServer.Util TypeMap compiler-libs.common ocaml-migrate-parsetree reason)
  (flags :standard -open Util -w -9)
  (preprocess (pps ReasonLanguageServer.Belt_ppx ReasonLanguageServer.Ppx_monads ppxlib.metaquot)))