(library
  (name Codemod)
  (public_name milk.Codemod)
  (libraries ReasonLanguageServer.Analyze ReasonLanguageServer.Util TypeMap compiler-libs.common ocaml-migrate-parsetree reason)
  (flags :standard -open Util -w -9)
  (preprocess (pps ReasonLanguageServer.Belt_ppx ReasonLanguageServer.Ppx_monads ppxlib.metaquot))
  )