(library
  (name Codemod)
  (public_name milk.Codemod)
  (libraries reason-language-server.Analyze reason-language-server.Util TypeMap compiler-libs.common ocaml-migrate-parsetree reason)
  (flags :standard -open Util -w -9)
  (preprocess (pps reason-language-server.Belt_ppx reason-language-server.Ppx_monads ppxlib.metaquot))
  )