
(library
  (name Serde)
  (public_name milk.Serde)
  (libraries ReasonLanguageServer.Analyze ReasonLanguageServer.Util TypeMap compiler-libs.common ocaml-migrate-parsetree)
  (flags :standard -w -9 -open Util)
  (preprocess (pps ReasonLanguageServer.Belt_ppx ReasonLanguageServer.Ppx_monads ppxlib.metaquot))
  )


