
(library
  (name Serde)
  (public_name milk.Serde)
  (libraries reason-language-server.Analyze reason-language-server.Util TypeMap compiler-libs.common ocaml-migrate-parsetree)
  (flags :standard -w -A -open Util)
  (preprocess (pps reason-language-server.Belt_ppx reason-language-server.Ppx_monads ppxlib.metaquot))
  )


