
(library
  (name TypeMap)
  (public_name milk.TypeMap)
  (libraries reason-language-server.Analyze reason-language-server.Util reason-language-server.Vendor compiler-libs.common ocaml-migrate-parsetree ppx_tools ppx_tools.metaquot)
  (flags :standard -w -A -open Util)
  (preprocess (pps reason-language-server.Belt_ppx reason-language-server.Ppx_monads ppx_tools.metaquot))
  )

